responsive align in the footer fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,10 @@ footer li a{
     color: white;
 }
 
+.align-responsive{
+    margin-top: 100px;
+}
+
 /*INDEX STYLES*/
     /*FIRST SECTION INDEX*/
 html{
@@ -510,6 +514,10 @@ html{
         border-radius: 2px;
     }
 
+    .align-responsive{
+        margin-top: 0;
+    }
+
     .firstSection{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -648,6 +656,11 @@ html{
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 2px;
     }
+
+    .align-responsive{
+        margin-top: 0;
+    }
+
 
     .firstSection{
         display: flex;
